# Dynamic-Sorting

./: pyproject.toml  requirements.txt
implementation/: sorting-example.ipynb
scripts/: example_usage.py
src/snowpark_batch/: __init__.py  api.py  batching.py
src/snowpark_batch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_api_integration.py  test_batching.py  test_normalize.py  test_phonetic.py
